parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail40_s64boverflow.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail40_s64boverflow.json
---
Ok(
    Number(
        9.223372036854776e18,
    ),
)
