parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail41_toolarge.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail41_toolarge.json
---
Ok(
    Number(
        1.8446744073709552e19,
    ),
)
